<resources>
    <string name="app_name">ShopBook</string>
    <string name="Welcome" />
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="send_code">Send code</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="new_community"><![CDATA[New & Community]]></string>

    <string name="profile">Profile</string>
    <string name="signin">SIGN IN</string>
    <string name="changepassword">Change password</string>
    <string name="updateprofile">Update Profile</string>
    <string name="permission">Permission</string>
    <string name="create">Create new account</string>
    <string name="current">Current Pass</string>
    <string name="newpass">New Pass</string>
    <string name="confirm">Confirm Pass</string>
    <string name="fullname">Full Name</string>
    <string name="gender">Gender</string>
    <string name="dof">Date Of Birthday</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="accept">Accept</string>
    <string name="searchNew">Mới nhất</string>
    <string name="searchSelling">Bán Chạy</string>
    <string name="searchPrice">Giá</string>
    <string name="myOrder">Order</string>
    <string name="orderDetail">Order Detail</string>
    <string name="author">Tác giả</string>
    <string name="category">Category</string>
    <string name="home_bar">Product</string>
    <string name="search_bar">Search</string>
    <string name="wishlist_bar">Wishlist</string>
    <string name="cart_bar">Cart</string>
    <string name="onboard">Book Store</string>
    <string name="history_search">Lịch sử tìm kiếm</string>
    <string name="introduce">Good books, like good friends, are few and chosen; the more select, the more enjoyable</string>
    <string name="supplier">Tên NCC: %s</string>
    <string name="year">Năm XB: 2022</string>
    <string name="product">sản phẩm</string>
    <string name="createdOn">Ngày đặt hàng :</string>
    <string name="orderAddress">Địa chỉ giao hàng :</string>
    <string name="orderQuantity">Tổng số lượng :</string>
    <string name="textTotal">Tổng tiền:</string>
    <string name="textStatus">Tình tạng đơn hàng:</string>
    <string name="language">Ngôn Ngữ: Tiếng Việt</string>
    <string name="quantity">Số lượng : 10</string>
    <string name="productId">Mã hàng: %d</string>
    <string name="readmore">Read more.</string>
    <string name="price">Price</string>
    <string name="th_ng_tin_s_n_ph_m">Thông tin sản phẩm</string>
    <string name="wishlist">WishList</string>
    <string name="deleteHistory">Xóa lịch sử tìm kiếm</string>
    <string name="nxb">NXB</string>
</resources>