<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white2"
    tools:context=".ui.auth.signup.SignUpFragment">
    <ImageView
        android:id="@+id/imgback"
        android:src="@drawable/account_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="@dimen/dp_30"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_register_to_get_started" />
    <EditText
        android:id="@+id/edittext1"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_auth_text_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/edittext2"
        app:layout_constraintTop_toBottomOf="@+id/edittext1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_auth_text_field"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/edittext3"
        app:layout_constraintTop_toBottomOf="@+id/edittext2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_auth_text_field"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/edittext4"
        app:layout_constraintTop_toBottomOf="@+id/edittext3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_auth_text_field"
        android:hint="@string/confirm_password"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <Button
        android:id="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/edittext4"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:backgroundTint="@null"
        android:background="@drawable/bg_auth_button"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/tv3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/don_t_have_an_account_register_now"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</androidx.constraintlayout.widget.ConstraintLayout>